# git-practice-pr

./: .gitignore  .pre-commit-config.yaml  README.md  asdf  pyproject.toml
.github/workflows/: ci-spit.yml  tests.yml
src/git_practice/submissions/: ang.py  bluegit107.py  riverfog7.py  riverfog8.py
tests/: test_submissions.py
